[flake8]
max-line-length = 99

[metadata]
name = pynab
author = Isaac Wagner
url = https://github.com/idwagner/pynab

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
install_requires =
    certifi >= 14.05.14
    six >= 1.10
    python_dateutil >= 2.5.3
    setuptools >= 21.0.0
    urllib3 >= 1.15.1
    click >= 7.1.2
    tabulate >= 0.8.7
    colorama >= 0.4.3
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pynab = pynab.cli:main
